Fix css layout problems

--- a/application/css/presentation.css
+++ b/application/css/presentation.css
@@ -25,7 +25,7 @@
     border-width: 6px;
     border-style: solid;
     border-color: #ffde3b;
-    font-size: 5em;
+    font-size: 1em;
     animation: fadeInAnimation 1s normal forwards;
     background: #000000;
 }
